# ftx

./: README.md  package-lock.json  package.json
.github/workflows/: tauri-build.yml
src/: App.css  App.css.test.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: file_browser.rs  mod.rs  settings.rs  transfer.rs
src-tauri/src/crypto/: mod.rs
src-tauri/src/db/: migrations.rs  mod.rs  schema.rs  settings_repo.rs
src-tauri/src/services/: connection.rs  ftp_client.rs  sftp_client.rs  transfer_engine.rs
src-tauri/src/services/sftp_client/: common.rs  mod.rs  openssh.rs  russh.rs
src-tauri/src/utils/: path.rs
src-tauri/src/validation/: host.rs
src/components/BookmarkPanel/: index.tsx
src/components/FileBrowser/: FilePanel.tsx  TransferActionBar.test.tsx  TransferActionBar.tsx
src/components/HostManager/: index.tsx
src/components/Layout/: index.tsx
src/hooks/: useFileBrowser.ts
src/stores/: fileBrowserStore.test.ts  fileBrowserStore.ts  settingsStore.test.ts  settingsStore.ts
src/utils/: connectionError.test.ts  connectionError.ts  remoteUploadConflict.test.ts  remoteUploadConflict.ts
