[package]
name = "ftx-tool"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ftx_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# SFTP 使用 russh（纯 Rust SSH），避免 libssh2 + Windows WINCNG 的 KEX 失败（Session -5）；无需 Perl 编 OpenSSL。
russh = { version = "0.58", default-features = false, features = ["ring", "flate2", "rsa"] }
russh-sftp = "2.1"
suppaftp = { version = "6", features = ["native-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
aes-gcm = "0.10"
base64 = "0.22"
rand = "0.8"
dirs = "5"

[dev-dependencies]
tempfile = "3"

