[package]
name = "ftx-tool"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ftx_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
suppaftp = { version = "6", features = ["native-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
aes-gcm = "0.10"
base64 = "0.22"
rand = "0.8"
dirs = "5"
# 全平台使用纯 Rust SSH/SFTP，上传/下载可流式上报进度。macOS 若仅用系统 `sftp -b` 批处理则无法在传输过程中回调进度。
russh = { version = "0.58", default-features = false, features = ["ring", "flate2", "rsa"] }
russh-sftp = "2.1"

[dev-dependencies]
tempfile = "3"

